[package]
name = "parser_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
# iced-x86 = {version = "1.21.0", features = ["code_asm"] }

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.20.0"
